# govrix-scout

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  install.ps1  install.sh  setup_commits.ps1  test_agents.py
.claude/skills/agentmesh-schemas/: SKILL.md
.claude/skills/compliance-first/: SKILL.md
.claude/skills/govrix-schemas/: SKILL.md
.claude/skills/rust-proxy/: SKILL.md
.context/: MEMORY.md  SESSION_LOG.md
.github/workflows/: ci.yml  release.yml
config/: agentmesh.default.toml  govrix.default.toml
crates/agentmesh-cli/: Cargo.toml
crates/agentmesh-cli/src/: client.rs  http.rs  main.rs
crates/agentmesh-cli/src/commands/: agents.rs  events.rs  status.rs
crates/agentmesh-common/: Cargo.toml
crates/agentmesh-common/src/: config.rs  errors.rs  lib.rs
crates/agentmesh-proxy/: Cargo.toml
crates/agentmesh-proxy/src/: events.rs  lib.rs  main.rs
crates/agentmesh-proxy/static/: dashboard.html
crates/agentmesh-reports/: Cargo.toml
crates/agentmesh-reports/src/: lib.rs
crates/agentmesh-store/: Cargo.toml
crates/agentmesh-store/src/: agents.rs  costs.rs  db.rs  events.rs  lib.rs  retention.rs
crates/govrix-common/: Cargo.toml
crates/govrix-common/src/: config.rs  lib.rs  license.rs
crates/govrix-identity/: Cargo.toml
crates/govrix-identity/src/: ca.rs  certs.rs  mtls.rs
crates/govrix-keygen/: Cargo.toml
crates/govrix-keygen/src/: main.rs
crates/govrix-policy/: Cargo.toml
crates/govrix-policy/src/: budget.rs  compliance.rs  engine.rs  hook.rs  lib.rs  pii.rs
crates/govrix-scout-common/src/: config.rs  errors.rs  lib.rs
crates/govrix-scout-proxy/src/: main.rs
crates/govrix-scout-store/src/: budget.rs  events.rs  lib.rs  projects.rs
crates/govrix-server/: Cargo.toml
crates/govrix-server/src/: api.rs  main.rs
dashboard/: README.md  index.html  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/api/: client.ts  types.ts
dashboard/src/components/: EnterpriseGate.tsx
docker/: Dockerfile  Dockerfile.prebuilt  docker-compose.local.yml  docker-compose.production.yml  docker-compose.yml  init-combined.sql  nginx.conf
docs/: PRODUCT_STATUS.md
docs/plans/: 2026-03-03-dashboard-ts-rewrite.md  2026-03-03-dashboard-typescript-rewrite-design.md
k8s/: deployment.yaml  kustomization.yaml  secret.yaml  service.yaml
migrations/: 001_create_events.sql  002_create_agents.sql  004_create_hypertables.sql  README.md
remotion/src/: GovrixLaunchVideo.tsx
scripts/: reset-db.sh  seed-db.sh  seed-demo-data.sh  setup.sh  test_agents.js  verify.sh
(+58 files in other folders)
