[package]
name = "govrix-policy"
version.workspace = true
edition.workspace = true

[dependencies]
agentmesh-common = { workspace = true }
govrix-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
