[package]
name = "govrix-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "govrix"
path = "src/main.rs"

[dependencies]
govrix-common = { workspace = true }
govrix-policy = { workspace = true }
govrix-identity = { workspace = true }
agentmesh-common = { workspace = true }
agentmesh-proxy = { workspace = true }
agentmesh-store = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
